# taktix-app

./: .commitlintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  CHANGELOG.md  LICENCE  README.md  biome.json  package.json  pm2.server.json  pnpm-lock.yaml  starter-turborepo-websocket-zod.code-workspace  taktix-app.code-workspace  turbo.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
apps/client/: .env.development  .env.production  .eslintrc.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/client/public/: browserconfig.xml  site.webmanifest  splashscreen.html
apps/client/src/: App.tsx  main.tsx
apps/client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: discord.rs  lib.rs  main.rs
apps/client/src-tauri/src/discord/: mod.rs
apps/server/: .env.sample  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/server/prisma/: schema.prisma
apps/server/src/: env.d.ts  globals.ts  handleClientMessage.ts  handleClientResponse.ts  handleSocketData.ts  index.ts
apps/website/: package.json  tsconfig.json
apps/website/components/: AppleIcon.tsx  ConditionalWrapper.tsx  OsIcon.tsx  (+5 more)
docs/: dendron.code-workspace
docs/notes/: equipments.md  leveling.md  root.md  statistics.md  talents.md
(+351 files in other folders)
